--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Build
       run: npm run build
     - name: Publish to github
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: baces-frontend
         path: dist
@@ -49,7 +49,9 @@ jobs:
       run: terraform apply -auto-approve -var="stage=${{ env.stage }}"
   deploy-release:
     runs-on: ubuntu-latest
-    needs: deploy-infra
+    needs:
+      - deploy-infra
+      - build-publish
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
