--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
         name: baces-frontend
         path: dist
   deploy-infra:
+    concurrency:
+      group: infra
+      cancel-in-progress: false
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -49,6 +52,9 @@ jobs:
       run: terraform apply -auto-approve -var="stage=${{ env.stage }}"
   deploy-release:
     runs-on: ubuntu-latest
+    concurrency:
+      group: infra
+      cancel-in-progress: false
     needs:
       - deploy-infra
       - build-publish
@@ -61,7 +67,7 @@ jobs:
         aws-region: ap-southeast-2
         role-to-assume: arn:aws:iam::${{env.aws_account_id}}:role/pipeline-role-${{ github.event.repository.name }}
     - name: Download artifact
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v4
       with:
         name: baces-frontend
     - name: Deploy to S3
