--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,9 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Build
-      run: npm run build
+      run: |
+        npm run build
+        cp -r src/images dist/images
     - name: Publish to github
       uses: actions/upload-artifact@v4
       with:
