--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "my-project",
 	"source": "src/index.html",
 	"scripts": {
-		"start": "parcel -p 7112",
-		"build": "parcel build"
+		"start": "npm run build && parcel -p 7112 --no-cache",
+		"build": "rm -rf dist && mkdir -p dist/images && cp -r src/images dist/images/ && parcel build --no-cache"
 	},
 	"devDependencies": {
 		"parcel": "latest",
