--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"start": "npm run build && parcel -p 7112 --no-cache",
 		"startwin": "parcel -p 7112 --no-cache",
 		"build": "rm -rf dist && mkdir -p dist/images && cp -r src/images/* dist/images/ && parcel build --no-cache",
+		"buildwin": "parcel build --no-cache",
 		"lint": "eslint src"
 	},
 	"devDependencies": {
