--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,25 +8,7 @@ env:
   aws_account_id: 597088028622
 
 jobs:
-  build-publish:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20'
-    - name: Install dependencies
-      run: npm install
-    - name: Build
-      run: |
-        npm run build
-    - name: Publish to github
-      uses: actions/upload-artifact@v4
-      with:
-        name: baces-frontend-${{env.stage}}-${{ github.run_id }}
-        path: dist
+
   deploy-infra:
     concurrency:
       group: "infra-${{ github.ref }}"
@@ -51,30 +33,28 @@ jobs:
     - name: Terraform Apply
       working-directory: infra
       run: terraform apply -auto-approve -var="stage=${{ env.stage }}"
-  deploy-release:
+  build-deploy:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
-    concurrency:
-      group: "infra-${{ github.ref }}"
-      cancel-in-progress: false
-    needs:
-      - deploy-infra
-      - build-publish
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20'
+    - name: Install dependencies
+      run: npm install
+    - name: Build
+      run: |
+        npm run build
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-region: ap-southeast-2
         role-to-assume: arn:aws:iam::${{env.aws_account_id}}:role/pipeline-role-${{ github.event.repository.name }}
-    - name: Download artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: baces-frontend-${{env.stage}}-${{ github.run_id }}
-        path: dist
     - name: Deploy to S3
       run: | 
         aws s3 sync dist s3://${{ github.event.repository.name }}-${{ env.stage }}-${{env.aws_account_id}} \
