--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"chat.js": "^1.0.2",
 		"fast-sort": "^3.4.0",
 		"pixi.js": "^8.1.6",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"table-sort-js": "^1.21.0"
 	},
 	"license": "UNLICENSED"
