--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.12.0",
+		"@parcel/packager-raw-url": "^2.12.0",
+		"@parcel/resolver-glob": "^2.12.0",
+		"@parcel/transformer-webmanifest": "^2.12.0",
 		"eslint": "^9.12.0",
 		"globals": "^15.11.0",
 		"parcel": "latest",
-		"parcel-plugin-static-files-copy": "^1.2.4",
+		"parcel-plugin-static-files-copy": "^2.6.0",
 		"path-browserify": "^1.0.1"
 	},
 	"dependencies": {
@@ -22,6 +25,5 @@
 		"fast-sort": "^3.4.0",
 		"pixi.js": "^8.1.6",
 		"table-sort-js": "^1.21.0"
-	},
-	"license": "UNLICENSED"
+	}
 }
