--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 		"@parcel/resolver-glob": "^2.12.0",
 		"@parcel/transformer-webmanifest": "^2.12.0",
 		"eslint": "^9.12.0",
+		"eslint-plugin-standard": "^5.0.0",
 		"globals": "^15.11.0",
 		"parcel": "latest",
-		"parcel-plugin-static-files-copy": "^2.6.0",
 		"path-browserify": "^1.0.1"
 	},
 	"dependencies": {
